# kiro-provider

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
plugin/: config.json  plugin.json
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml
src-tauri/src/: commands.rs  credentials.rs  fingerprint.rs  main.rs  provider.rs  risk_control.rs  token_refresh.rs
src-tauri/src/translator/: anthropic_to_cw.rs  cw_to_anthropic.rs  mod.rs  openai_to_cw.rs
src/components/CredentialCard/: CardActions.tsx  CardHeader.tsx  CardStats.tsx  FingerprintPanel.tsx  StatusPanel.tsx  SwitchResultPanel.tsx  UsagePanel.tsx  index.tsx  types.ts
src/hooks/: useCredentialActions.ts
src/types/: plugin-components.d.ts  proxycast-plugin-components.d.ts
