[package]
name = "kiro-provider"
version = "1.0.0"
edition = "2021"
authors = ["ProxyCast Team"]
description = "Kiro (AWS CodeWhisperer) OAuth Provider Plugin for ProxyCast"
license = "MIT"
repository = "https://github.com/aiclientproxy/kiro-provider"

[[bin]]
name = "kiro-provider-cli"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Crypto
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Glob pattern matching
glob = "0.3"

# Lazy static
lazy_static = "1"

# Directories
dirs = "5"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
